Remove obsolete definition